hex color entry wants to fight the user #58014

Closed
opened 2018-11-23 12:28:37 +01:00 by Jakub Steiner · 9 comments

System Information
Operating system and graphics card
Fedora Linux 29

Blender Version
Broken: 2.80alpha 2 2018-11-22

Short description of error

When entering color as a hex entry, Blender reinterprets it and shows a different value, because the computer knows color management way better than the banana loving ape in front of the screen.

Exact steps for others to reproduce the error
Go into, say, world color, switch to hex color view, enter ffffff, but blender insists on showing ddcfd8 (with a note that it's gamma corrected). I would expect all the color management to happen on top of the input value rather than adjusting the input value.

Here's a show screencast of the situation: http://jimmac.musichall.cz/stuff/unexpected-hex-entry.webm

**System Information** Operating system and graphics card Fedora Linux 29 **Blender Version** Broken: 2.80alpha 2 2018-11-22 **Short description of error** When entering color as a hex entry, Blender reinterprets it and shows a different value, because the computer knows color management way better than the banana loving ape in front of the screen. **Exact steps for others to reproduce the error** Go into, say, world color, switch to hex color view, enter ffffff, but blender insists on showing ddcfd8 (with a note that it's gamma corrected). I would expect all the color management to happen on top of the input value rather than adjusting the input value. Here's a show screencast of the situation: http://jimmac.musichall.cz/stuff/unexpected-hex-entry.webm
Author

Added subscriber: @JakubSteiner

Added subscriber: @JakubSteiner
Author

Do note this was an old .blend and the display device was mysteriously set to DCI-P3 rather than sRGB, which does not seem to suffer from this.

Do note this was an old .blend and the display device was mysteriously set to DCI-[P3](https://archive.blender.org/developer/P3.txt) rather than sRGB, which does not seem to suffer from this.

Added subscriber: @brecht

Added subscriber: @brecht

Probably hex should always convert to/from sRGB color space without a view transform and regardless of the display space.

Probably hex should always convert to/from sRGB color space without a view transform and regardless of the display space.

Added subscriber: @ZedDB

Added subscriber: @ZedDB

@brecht something else seems to be wrong with the color transform too. Blender crashes for me if I switch to DCI-P3 and try to change the world color wheel, hsv, or hex values.
This is the error it prints:

 OpenColorIO Error: 3D Luts can only be applied in the forward direction. (inverse) specified.

This seems to get triggered by the ui_block_cm_to_scene_linear_v3 calls in source/blender/editors/interface/interface_region_color_picker.c

@brecht something else seems to be wrong with the color transform too. Blender crashes for me if I switch to DCI-[P3](https://archive.blender.org/developer/P3.txt) and try to change the world color wheel, hsv, or hex values. This is the error it prints: ``` OpenColorIO Error: 3D Luts can only be applied in the forward direction. (inverse) specified. ``` This seems to get triggered by the ui_block_cm_to_scene_linear_v3 calls in source/blender/editors/interface/interface_region_color_picker.c
Brecht Van Lommel self-assigned this 2018-12-05 11:20:44 +01:00

Yes, the problem is that it goes through a view transform which is not invertible in general, and just not appropriate for this case.

Anyway, fixing this requires some familiarity with the color management system, so assigning to self.

Yes, the problem is that it goes through a view transform which is not invertible in general, and just not appropriate for this case. Anyway, fixing this requires some familiarity with the color management system, so assigning to self.

This issue was referenced by a7b3d58066

This issue was referenced by a7b3d58066a18c63037051477e45528380c5decf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58014
No description provided.