Fix T58014, T58650: issues with hex color and Filmic view transform.

Hex color values are now always in sRGB space, as would be expected by
most other applications. Previously they were in display space and using
the view transform.